Fix text align class #158

--- a/src/scss/config/_variable.scss
+++ b/src/scss/config/_variable.scss
@@ -357,7 +357,7 @@ $wysiwyg-figcaption-font-size: 87.5% !default;
 //----------------------------------------------------
 
 // Text Align
-$text-align-class-default: ".heading, .texts, .text" !default;
+$text-align-class: ".heading, .texts, .text" !default;
 
 //----------------------------------------------------
 // / Utility - Display
